# ftnx

./: LICENSE.md  README.md  mkdocs.yml  pyproject.toml
ftnx/: __init__.py  __version__.py  _main.py
