[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "ftnx"
description = "A library and command line tool for interacting with Fortanix DSM"
license = "BSD-3-Clause"
requires-python = ">= 3.8"
authors = [
    { name = "Paul Stevens", email = "ps@theblackwall.uk" },
]
classifiers = [
    "Development Status :: 4 :: Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "httpx",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
brotli = [
    "brotli; platform_python_implementation == 'CPython'",
    "brotlicffi; platform_python_implementation != 'CPython'",
]
cli = [
    "click==8.*",
    "pygments==2.*",
    "rich>=10,<14",
]
zstd = [
    "zstandard>=0.18.0",
]

[project.scripts]
ftnx = "ftnx:main"

[project.urls]
Changelog = "https://github.com/psnosignaluk/ftnx/blob/master/CHANGELOG.md"
Documentation = "https://ftnx.theblackwall.uk"
Homepage = "https://github.com/psnosignauk/ftnx"
Source = "https://github.com/psnosignaluk/ftnx"

[tool.hatch.version]
path = "ftnx/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ftnx",
    "/CHANGELOG.md",
    "/README.md",
    "/tests",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n## Release Information\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
pattern = "\n(###.+?\n)## "

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n---\n\n[Full changelog](https://github.com/encode/ftnx/blob/master/CHANGELOG.md)\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="(docs/img/.*?)"'
replacement = 'src="https://raw.githubusercontent.com/encode/ftnx/master/\1"'

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-rxXs"
filterwarnings = [
    "error",
]
markers = []

[tool.coverage.run]
omit = ["venv/*", "ftnx/_compat.py"]
include = ["ftnx/*", "tests/*"]